--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,76 +1,101 @@
-/* index.css */
+.homepage {
+  color: #fff;
+  text-align: center;
+  background-image: url("https://wallpapercave.com/wp/wp4128796.jpg");
+  background-position: center;
+  background-size: cover;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  display: flex;
+}
 
-/* Reset default styles */
-body,
-h1,
-h2,
-h3,
-p,
-ul,
-ol {
-    margin: 0;
-    padding: 0;
+.homepage h1 {
+  color: #000;
+  margin-top: 25%;
+  margin-bottom: 20px;
+  font-size: 3em;
+}
+
+.homepage a {
+  color: black;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 1.5em;
+  text-decoration: none;
+  transition: background-color .3s, color .3s;
+}
+
+.homepage a:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+.homepage .Link {
+  display: flex;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    line-height: 1.6;
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+.register-container {
+  color: white;
+  border-radius: 10px;
+  border: 1px solid black;
+  background-image: url("https://wallpapercave.com/wp/wp4128796.jpg");
+  background-position: center;
+  background-size: cover;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  display: flex;
 }
 
-/* Header */
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+.register-container h1 {
+  margin-bottom: 20px;
+  font-size: 3em;
 }
 
-/* UserProfilePage */
-.user-profile {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 20px 0;
+.register-container form {
+  flex-direction: column;
+  width: 300px;
+  display: flex;
 }
 
-.user-profile h2 {
-    color: #333;
-    margin-bottom: 10px;
+.register-container input {
+  color: white;
+  background: cadetblue;
+  border: 2px solid #000;
+  border-radius: 5px;
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 1em;
 }
 
-.user-profile label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+.register-container input::placeholder {
+  color: #ffffffb3;
 }
 
-.user-profile input[type='text'],
-.user-profile input[type='password'],
-.user-profile input[type='email'] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.register-container button {
+  color: #000;
+  cursor: pointer;
+  background-color: #fff;
+  border: 2px solid #000;
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: fit-content;
+  margin-left: 95px;
+  font-size: 1.2em;
+  transition: background-color .3s, color .3s;
 }
 
-.user-profile button {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.register-container button:hover {
+  background-color: #ffffffb3;
 }
 
-.user-profile button:hover {
-    background-color: #555;
-}
